speed up search about 1000x, prevent thumbnail shrink when search, make animated thumbnail loader not break everything, fix video thumbnail extension compatability, fix tiny text background rounding issue, make the + icon look more aligned

--- a/public/style.css
+++ b/public/style.css
@@ -6323,3 +6323,7 @@ body:not(.movingUI) .drawer-content.maximized {
   border-bottom-left-radius: 2px;
   border-bottom-right-radius: 2px;
 }
+
+#bg_menu_content {
+  flex-basis: 100%;
+}
